/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import "mesos.proto";

package mesos.containerizer;


/**
 * Information about a containerized task launch.
 */
message Launch {
  required ContainerID containerId = 1;
  required TaskInfo task = 2;
  required FrameworkID frameworkId = 3;
  required string directory = 4;
  optional string user = 5;
  required SlaveID slaveId = 6;
  required string slavePid = 7;
  required bool checkpoint = 8;
  optional string mesosExecutorPath = 9;
}


/**
 * Information about a container termination.
 */
message Termination {
  // A container may be killed if it exceeds its resources; this will be
  // indicated by killed=true and described by the message string.
  required bool killed = 1;
  required string message = 2;

  // Exit status of the process.
  optional int32 status = 3;
}


/**
 * Collection of Resource.
 *
 * TODO(tillt): Consider pulling this into the mesos namespace and
 * globally using it.
 */
message ResourceArray {
  repeated Resource resource = 1;
}


/**
 * Describes an external containerizer's status.
 */
message Status {
  // This message does not have to adhere to any scheme.
  required string message = 1;
}


/**
 * Describes an external containerizer's task.
 */
message Task {
  required TaskInfo task = 1;
  required string mesos_executor_path = 2;
}
